--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
     </header>
     <!--FIN DE LA CABECERA-->
 
+    <!--- INICIO BANER -->
+
+    <Section class="wrap">
+        <section id="info">
+
+            <div id="banner">
+                <h1> Maqueta Web Andres Pardo</h1>
+            </div>
+
+        </section>
+
+    </Section>
+
+    <!--- FIN BANER -->
+
+     
+
+
 </body>
 
 </html>
