--- a/index.html
+++ b/index.html
@@ -35,9 +35,56 @@
     <Section class="wrap">
         <section id="info">
 
+
             <div id="banner">
                 <h1> Maqueta Web Andres Pardo</h1>
-            </div>
+
+                <div id="cards">
+
+                    <div class="card">
+                        <p class="icon">H</p>
+                        <h2 class="category">Desarolo web</h2>
+                        <p class="description">
+                            Aprende los principales lengiajes de programacion, te convertiras ene le mejor
+                        </p>
+                    </div>
+
+
+                    <div class="card">
+                        <p class="icon">_</p>
+                        <h2 class="category">Sistemas operativos</h2>
+                        <p class="description">
+                            Aprende aprende administarr los sistemas operativos en linux, windos y os
+                        </p>
+                    </div>
+
+                    <div class="card">
+                        <p class="icon">S</p>
+                        <h2 class="category">Hardware</h2>
+                        <p class="description">
+                            Aprende y conoce tolo lo relacionado con el Hardware
+                        </p>
+                    </div>
+
+                    <div class="card">
+                        <p class="icon">u</p>
+                        <h2 class="category">Reds e Internet</h2>
+                        <p class="description">
+                            Aprende administrar las redes de internet tto en proteccion a conexion wifi
+                        </p>
+                    </div>
+
+                    <div class="card">
+                        <p class="icon">a</p>
+                        <h2 class="category">Bases de Datos</h2>
+                        <p class="description">
+                            Aprende a montar y administarr bases de datos
+                        </p>
+
+                    </div>
+                    <div>
+
+                    </div>
 
         </section>
 
@@ -45,7 +92,7 @@
 
     <!--- FIN BANER -->
 
-     
+
 
 
 </body>
