--- a/index.html
+++ b/index.html
@@ -30,67 +30,116 @@
     </header>
     <!--FIN DE LA CABECERA-->
 
-    <!--- INICIO BANER -->
+
 
     <Section class="wrap">
         <section id="info">
 
-
+            <!--- INICIO BANER -->
             <div id="banner">
                 <h1> Maqueta Web Andres Pardo</h1>
-
-                <div id="cards">
-
-                    <div class="card">
-                        <p class="icon">H</p>
-                        <h2 class="category">Desarolo web</h2>
-                        <p class="description">
-                            Aprende los principales lengiajes de programacion, te convertiras ene le mejor
-                        </p>
-                    </div>
+            </div>
+            <!--- FIN BANER -->
 
 
-                    <div class="card">
-                        <p class="icon">_</p>
-                        <h2 class="category">Sistemas operativos</h2>
-                        <p class="description">
-                            Aprende aprende administarr los sistemas operativos en linux, windos y os
-                        </p>
-                    </div>
 
-                    <div class="card">
-                        <p class="icon">S</p>
-                        <h2 class="category">Hardware</h2>
-                        <p class="description">
-                            Aprende y conoce tolo lo relacionado con el Hardware
-                        </p>
-                    </div>
+            <!--- INICIO TARJETAS-->
+            <div id="cards">
 
-                    <div class="card">
-                        <p class="icon">u</p>
-                        <h2 class="category">Reds e Internet</h2>
-                        <p class="description">
-                            Aprende administrar las redes de internet tto en proteccion a conexion wifi
-                        </p>
-                    </div>
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarolo web</h2>
+                    <p class="description">
+                        Aprende los principales lengiajes de programacion, te convertiras ene le mejor
+                    </p>
+                </div>
 
-                    <div class="card">
-                        <p class="icon">a</p>
-                        <h2 class="category">Bases de Datos</h2>
-                        <p class="description">
-                            Aprende a montar y administarr bases de datos
-                        </p>
 
-                    </div>
-                    <div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas operativos</h2>
+                    <p class="description">
+                        Aprende aprende administarr los sistemas operativos en linux, windos y os
+                    </p>
+                </div>
 
-                    </div>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">
+                        Aprende y conoce tolo lo relacionado con el Hardware
+                    </p>
+                </div>
+
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Reds e Internet</h2>
+                    <p class="description">
+                        Aprende administrar las redes de internet tto en proteccion a conexion wifi
+                    </p>
+                </div>
+
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de Datos</h2>
+                    <p class="description">
+                        Aprende a montar y administarr bases de datos
+                    </p>
+                </div>
+            </div>
+            <!--- FIN DE TARJETAS -->
 
         </section>
 
+        <!--- INICIO BARRA LAETRA -->
+        <aside id="lateral">
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form action="">
+                    <input type="text">
+                    <input type="button" value="L" class="icon">
+                </form>
+
+            </div>
+            <h3>LOGIN</h3>
+            <div id="login" class="aside-box">
+                <form action="">
+                    <label id="user" class="icon">U</label>
+                    <input type="email">
+
+                    <label id="password" class="icon">w</label>
+                    <input type="password">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpair">
+
+                    <a href="#">Registarte aqui</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+            <h3>REDES SOCIALES</h3>
+            <div di="social" class="aside-box">
+                <div class="twitter">
+                    <a href="#">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#">f</a>
+                </div>
+                <div class="you tube">
+                    <a href="#">y</a>
+                </div>
+
+            </div>
+            <h3>PATROCINADORES</h3>.
+            <div id="sports" class="aside-box">
+                
+            </div>
+        </aside>
+        <!--- FIN BARRA ALETERAL -->
+
     </Section>
 
-    <!--- FIN BANER -->
+
 
 
 
