--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-    <Section class="wrap">
+    <section class="wrap">
         <section id="info">
 
             <!--- INICIO BANER -->
@@ -118,27 +118,139 @@
                 </form>
             </div>
             <h3>REDES SOCIALES</h3>
-            <div di="social" class="aside-box">
+            <div id="social" class="aside-box">
                 <div class="twitter">
-                    <a href="#">t</a>
+                    <a href="#" class="icon">t</a>
                 </div>
                 <div class="facebook">
-                    <a href="#">f</a>
+                    <a href="#" class="icon">f</a>
                 </div>
                 <div class="you tube">
-                    <a href="#">y</a>
+                    <a href="#" class="icon">y</a>
                 </div>
 
             </div>
             <h3>PATROCINADORES</h3>.
             <div id="sports" class="aside-box">
-                
+
             </div>
         </aside>
         <!--- FIN BARRA ALETERAL -->
 
-    </Section>
+    </section>
+    <!--- INICIO ARTICULOS -->
+    <section id="articles">
+        <h2>Ultimos articulos</h2>
+        <div class="clearfix"></div>
+        <article>
+            <div class="data">
+                <span>fecha: 12 DIC</span>
+                <span>Categorias: Pruebas</span>
+            </div>
+                <h4>
+                    <a href="#">titulo del articulo</a>
+                </h4>
+                <p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                    ultricies lacus sollicitudin sed.
+                </p>           
+        </article>
+        <article>
+            <div class="data">
+                <span>fecha: 12 DIC</span>
+                <span>Categorias: Pruebas</span>
+            </div>
+                <h4>
+                    <a href="#">titulo del articulo</a>
+                </h4>
+                <p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                    ultricies lacus sollicitudin sed.
+                </p>           
+        </article>
+        <article>
+            <div class="data">
+                <span>fecha: 12 DIC</span>
+                <span>Categorias: Pruebas</span>
+            </div>
+                <h4>
+                    <a href="#">titulo del articulo</a>
+                </h4>
+                <p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                    ultricies lacus sollicitudin sed.
+                </p>           
+        </article>
+        <article>
+            <div class="data">
+                <span>fecha: 12 DIC</span>
+                <span>Categorias: Pruebas</span>
+            </div>
+                <h4>
+                    <a href="#">titulo del articulo</a>
+                </h4>
+                <p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                    ultricies lacus sollicitudin sed.
+                </p>           
+        </article>
+        <article>
+            <div class="data">
+                <span>fecha: 12 DIC</span>
+                <span>Categorias: Pruebas</span>
+            </div>
+                <h4>
+                    <a href="#">titulo del articulo</a>
+                </h4>
+                <p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                    ultricies lacus sollicitudin sed.
+                </p>           
+        </article>
+        <article id="blog">
+            <a href="#">Ir al BLOG</a>
+        </article>
 
+    </section>
+
+
+
+    <!--- FIN ARTICULOS -->
 
 
 
