--- a/index.html
+++ b/index.html
@@ -245,12 +245,74 @@
         <article id="blog">
             <a href="#">Ir al BLOG</a>
         </article>
+           <!--- FIN ARTICULOS -->
 
     </section>
+    <!---INICIO PIE DE PAGINA-->
+    <div class="clearfix"></div>
+    <footer id="footer">
+        <div class="wrap">
+
+            <nav id="menu_footer">
+                <h5>MENU</h5>
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACION</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+
+            <div id="location">
+                <h5>NUESTRAS OFICINAS</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7953.7484368101605!2d-74.20947186045481!3d4.616517825501147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f25f4a85c49%3A0x2cfa1cca81f8a855!2sCojunto%20residencial%20macarena%202!5e0!3m2!1ses-419!2sco!4v1691246336118!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
+            </div>
+
+            <div id="info">
+                <h5>Desarrollado con</h5>
+                <p>
+                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creadocon html y css">
+                </p>
+                <h5>Optimizado para</h5>
+                <p id="browsers">
+                    <a href="#">
+                        <img src="img/firefox-icon.png" alt="firefox" title="firefox">
+                    </a>
+                    <a href="#">
+                        <img src="img/chrome.png" alt="chrome" title="chrome">
+                    </a>
+                    <a href="#">
+                        <img src="img/Opera_256x256.png" alt="Opera" title="Opera">
+                    </a>
+                    <a href="#">
+                        <img src="img/safari.png" alt="safari" title="safari">
+                    </a>
+                    <a href="#">
+                        <img src="img/android.png" alt="android" title="android">
+                    </a>
+                    <a href="#"> 
+                        <img src="img/ios.png" alt="ios" title="ios">
+                    </a>
+                </p>
+                <h5>AUTOR</h5>
+                <P>
+                    &copy;ANDRES PARDO
+                </P>
+
+            </div>
 
 
 
-    <!--- FIN ARTICULOS -->
+        </div>
+
+    </footer>
+
+
+
+
+     <!---FIN  PIE DE PAGINA-->
+ 
 
 
 
