--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <footer id="footer">
         <div class="wrap">
 
-            <nav id="menu_footer">
+            <div id="menu_footer">
                 <h5>MENU</h5>
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -261,7 +261,7 @@
                     <li><a href="#">FORMACION</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
-            </nav>
+            </div>
 
             <div id="location">
                 <h5>NUESTRAS OFICINAS</h5>
