--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </section>
 
         <!--- INICIO BARRA LAETRA -->
+        <div class="clearfix"></div>
         <aside id="lateral">
             <h3>BUSCAR</h3>
             <div id="search">
@@ -275,7 +276,7 @@
             </div>
 
             <div id="location">
-                <h5>NUESTRAS OFICINAS</h5>
+                <h5>Instalaciones</h5>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7953.7484368101605!2d-74.20947186045481!3d4.616517825501147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f25f4a85c49%3A0x2cfa1cca81f8a855!2sCojunto%20residencial%20macarena%202!5e0!3m2!1ses-419!2sco!4v1691246336118!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 
             </div>
