Fin del responsive

--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
 
 
 
-    <section class="wrap">
+
+
+
+
+    <section class="wrap wrap-content">
         <section id="info">
 
             <!--- INICIO BANER -->
+
             <div id="banner">
                 <h1> Maqueta Web Andres Pardo</h1>
             </div>
-            <!--- FIN BANER -->
 
+            <!--- FIN BANER -->
 
 
             <!--- INICIO TARJETAS-->
@@ -50,9 +55,9 @@
 
                 <div class="card">
                     <p class="icon">H</p>
-                    <h2 class="category">Desarolo web</h2>
+                    <h2 class="category">Desarrollo web</h2>
                     <p class="description">
-                        Aprende los principales lengiajes de programacion, te convertiras ene le mejor
+                        Aprende los principales lenguajes de programacion, te convertiras en el mejor
                     </p>
                 </div>
 
@@ -93,6 +98,7 @@
 
         </section>
 
+
         <!--- INICIO BARRA LAETRA -->
         <div class="clearfix"></div>
         <aside id="lateral">
@@ -116,7 +122,7 @@
                     <input type="submit" value="Entrar">
                     <input type="reset" value="Limpair">
 
-                    <a href="#">Registarte aqui</a>
+                    <a href= "#">Registarte aqui</a>
                     <a href="#">¿Has olvidado tu contraseña?</a>
                 </form>
             </div>
@@ -150,116 +156,122 @@
         <!--- FIN BARRA ALETERAL -->
 
     </section>
+
+
+
+
     <!--- INICIO ARTICULOS -->
     <section id="articles">
-        <h2>HOLA ANGIE PARRA </h2>
+        <h2>HOLA ANDRES</h2>
         <div class="clearfix"></div>
         <article>
             <div class="data">
                 <span>fecha: 12 DIC</span>
                 <span>Categorias: Pruebas</span>
             </div>
-                <h4>
-                    <a href="#">titulo del articulo</a>
-                </h4>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
-                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
-                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
-                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
-                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
-                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
-                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
-                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
-                    ultricies lacus sollicitudin sed.
-                </p>           
+            <h4>
+                <a href="#">titulo del articulo</a>
+            </h4>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                ultricies lacus sollicitudin sed.
+            </p>
         </article>
         <article>
             <div class="data">
                 <span>fecha: 12 DIC</span>
                 <span>Categorias: Pruebas</span>
             </div>
-                <h4>
-                    <a href="#">titulo del articulo</a>
-                </h4>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
-                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
-                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
-                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
-                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
-                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
-                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
-                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
-                    ultricies lacus sollicitudin sed.
-                </p>           
+            <h4>
+                <a href="#">titulo del articulo</a>
+            </h4>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                ultricies lacus sollicitudin sed.
+            </p>
         </article>
         <article>
             <div class="data">
                 <span>fecha: 12 DIC</span>
                 <span>Categorias: Pruebas</span>
             </div>
-                <h4>
-                    <a href="#">titulo del articulo</a>
-                </h4>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
-                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
-                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
-                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
-                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
-                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
-                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
-                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
-                    ultricies lacus sollicitudin sed.
-                </p>           
+            <h4>
+                <a href="#">titulo del articulo</a>
+            </h4>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                ultricies lacus sollicitudin sed.
+            </p>
         </article>
         <article>
             <div class="data">
                 <span>fecha: 12 DIC</span>
                 <span>Categorias: Pruebas</span>
             </div>
-                <h4>
-                    <a href="#">titulo del articulo</a>
-                </h4>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
-                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
-                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
-                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
-                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
-                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
-                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
-                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
-                    ultricies lacus sollicitudin sed.
-                </p>           
+            <h4>
+                <a href="#">titulo del articulo</a>
+            </h4>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                ultricies lacus sollicitudin sed.
+            </p>
         </article>
         <article>
             <div class="data">
                 <span>fecha: 12 DIC</span>
                 <span>Categorias: Pruebas</span>
             </div>
-                <h4>
-                    <a href="#">titulo del articulo</a>
-                </h4>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
-                    arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
-                    ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
-                    commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
-                    sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
-                    Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
-                    interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
-                    Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
-                    ultricies lacus sollicitudin sed.
-                </p>           
+            <h4>
+                <a href="#">titulo del articulo</a>
+            </h4>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed urna velit. Vestibulum tristique
+                arcu neque, vitae suscipit elit fringilla vel. Nunc aliquam ut elit in ultricies. Quisque egestas
+                ipsum vitae risus varius, ut dictum odio fermentum. Ut vitae nisl nisl. Fusce egestas, risus vel
+                commodo finibus, tellus tellus porta nisi, in aliquet nulla est ac lorem. Maecenas dolor massa,
+                sodales ac metus eu, laoreet convallis elit. In quis dolor non ex mattis tempor sit amet quis ex.
+                Etiam commodo neque eu fringilla posuere. Praesent nec turpis nisl. Nullam a tortor non dolor
+                interdum eleifend congue vel quam. Sed ac enim lacus. Fusce non rhoncus massa. Donec eu nulla erat.
+                Quisque fringilla eros a lorem euismod, ut dapibus ipsum facilisis. Ut faucibus odio arcu, quis
+                ultricies lacus sollicitudin sed.
+            </p>
         </article>
         <article id="blog">
             <a href="#">Ir al BLOG</a>
         </article>
-           <!--- FIN ARTICULOS -->
+        <!--- FIN ARTICULOS -->
 
     </section>
+
+
     <!---INICIO PIE DE PAGINA-->
     <div class="clearfix"></div>
     <footer id="footer">
@@ -277,14 +289,18 @@
 
             <div id="location">
                 <h5>Instalaciones</h5>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7953.7484368101605!2d-74.20947186045481!3d4.616517825501147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f25f4a85c49%3A0x2cfa1cca81f8a855!2sCojunto%20residencial%20macarena%202!5e0!3m2!1ses-419!2sco!4v1691246336118!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7953.7484368101605!2d-74.20947186045481!3d4.616517825501147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f25f4a85c49%3A0x2cfa1cca81f8a855!2sCojunto%20residencial%20macarena%202!5e0!3m2!1ses-419!2sco!4v1691246336118!5m2!1ses-419!2sco"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             </div>
 
             <div id="info">
                 <h5>Desarrollado con</h5>
                 <p>
-                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creadocon html y css">
+                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png"
+                        alt="Creadocon html y css">
                 </p>
                 <h5>Optimizado para</h5>
                 <p id="browsers">
@@ -303,7 +319,7 @@
                     <a href="#">
                         <img src="img/android.png" alt="android" title="android">
                     </a>
-                    <a href="#"> 
+                    <a href="#">
                         <img src="img/ios.png" alt="ios" title="ios">
                     </a>
                 </p>
@@ -323,8 +339,8 @@
 
 
 
-     <!---FIN  PIE DE PAGINA-->
- 
+    <!---FIN  PIE DE PAGINA-->
+
 
 
 
